--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.9.5"
   },
